2006-03-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Use $_SERVER['PHP_SELF'] when available in dmailerd.phpcron and returnmail.phpsh
	* Fix bugtracker issue 2982: do not send emails without any content.
	* Correction to two incorrect characters in locallang_csh_web_txdirectmailM1.xml

2006-03-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* On behalf of Ralf Hettinger: three new functions importRecords_checkMail, importRecords_checkImportDublettes and importRecords_makeName for more filtering of the imported CSV values.

2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix bugtracker issue 2924.
	* Fix bugtracker issue 2925.
	* Make direct_mail conflict with plugin_mgm.
	* Remove reference to t3lib_extMgm::extPath('direct_mail') in ext_update.php. Fix issue 2920.
	* Do not allow database update before the extension is installed (TCA not yet initialised). Fix issue 2920.
	* Remove reference to t3lib_extMgm::extPath('direct_mail') in require_once in class.mod_wed_dmail.php.
	* Fix issue 2895.

2006-03-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix bugtracker issue 2821.
	* Eliminate use of deprecated $TYPO3_DB->sql($db,$query) to ensure dbal compliance.

2006-03-15 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Systematic review and adjustment of all SQL queries to ensure compatibility with dbal system extension.

2006-03-10 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to typo error in locallang_mod_web_txdirectmailM1.xml

2006-03-07 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Honor return path and defer mode settings in dmailer_sendSimple.
	* Do not display the statistics option for direct mails that where sent to a list of addresses (they are not available).
	* In the Direct Mails function, do not display direct mails that were already sent.